[gd_scene format=3 uid="uid://bxfbx3tsg14vw"]

[ext_resource type="Script" uid="uid://dejc31uediois" path="res://Entities/Cow/cow.gd" id="1_5131l"]
[ext_resource type="Texture2D" uid="uid://o3njk32ck5o5" path="res://Entities/Cow/Sprites/cow1.png" id="1_liyvu"]
[ext_resource type="Texture2D" uid="uid://c1fyp88or0xwk" path="res://Entities/Cow/Sprites/cow2.png" id="2_3xmmb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j2u00"]
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7oc5e"]
radius = 12.0416

[sub_resource type="SpriteFrames" id="SpriteFrames_qmi0r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_liyvu")
}, {
"duration": 1.0,
"texture": ExtResource("2_3xmmb")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Vaca" type="CharacterBody2D"]
z_index = -99
script = ExtResource("1_5131l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_j2u00")

[node name="Area2D_vaca" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_vaca"]
shape = SubResource("CircleShape2D_7oc5e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 3
sprite_frames = SubResource("SpriteFrames_qmi0r")
autoplay = "default"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Timer_die" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="area_entered" from="Area2D_vaca" to="." method="_on_area_2d_vaca_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer_die" to="." method="_on_timer_die_timeout"]
